fix container padding, logo stretch

--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -11,6 +11,7 @@
   background-size: cover;
   z-index: -100;
   overflow:hidden;
+  padding: 0 20px;
 }
 .cover {
   position: absolute;
@@ -46,6 +47,7 @@
 }
 .logo {
   max-width: 100%;
+  height: auto;
   transition: all 0.1s ease-in-out;
 }
 .logo:active {
